# dictgen

./: .gitignore  Cargo.toml  README.md
elements/: hanzi.txt
src/: main.rs
